--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "pnpm prisma generate && next build",
-  "start": "next start"
-},
+    "dev": "next dev",
+    "build": "pnpm prisma generate && next build",
+    "start": "next start"
+  },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -26,6 +26,7 @@
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
     "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
