--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "prisma": "^6.18.0",
     "react": "19.2.0",
