--- a/.github/workflows/cron-weather.yml
+++ b/.github/workflows/cron-weather.yml
@@ -1,9 +1,9 @@
 name: Weather Cron
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch: {}
   schedule:
-    - cron: '*/5 * * * *' 
+    - cron: '*/5 * * * *'
 
 jobs:
   fetch-weather:
