--- a/.github/workflows/cron-weather.yml
+++ b/.github/workflows/cron-weather.yml
@@ -3,7 +3,7 @@ name: Weather Cron
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 */12 * * *'
 
 jobs:
   fetch-weather:
