--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "pnpm prisma generate && next build",
     "start": "next start",
     "cron-weather": "node scripts/cron-weather.js"
-  
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -17,9 +16,11 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
