--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
+    "luxon": "^3.7.2",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "recharts": "2.15.4",
+    "rrule": "^2.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
