--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@neondatabase/serverless": "^1.0.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.18.0",
+    "@prisma/adapter-neon": "^7.0.1",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -34,7 +37,7 @@
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
-    "prisma": "^6.18.0",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
@@ -43,11 +46,14 @@
     "rrule": "^2.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "ws": "^8.18.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/ws": "^8.18.1",
     "dotenv": "^17.2.3",
+    "prisma": "^7.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
