cron reverted changes to .github/workflows/ cron-weather.yml

--- a/.github/workflows/cron-weather.yml
+++ b/.github/workflows/cron-weather.yml
@@ -8,35 +8,16 @@ on:
 jobs:
   fetch-weather:
     runs-on: ubuntu-latest
-
     steps:
-      
       - uses: actions/checkout@v3
-
-      
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          cache: 'pnpm'
-
-      
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      
+      - name: Install pnpm
+        run: npm install -g pnpm
       - name: Install dependencies
         run: pnpm install
-
-      
-      - name: Generate Prisma client
-        run: npx prisma generate
-        env:
-          DATABASE_URL: ${{ secrets.DIRECT_URL }}
-
-      
       - name: Run cron script
         run: pnpm run cron-weather
         env:
