--- a/.github/workflows/cron-weather.yml
+++ b/.github/workflows/cron-weather.yml
@@ -1,31 +1,25 @@
 name: Weather Cron
 
 on:
-  schedule:
-    - cron: '0 */12 * * *' 
   workflow_dispatch: {}
+  schedule:
+    - cron: '0 */12 * * *'
 
 jobs:
-  run-cron:
+  fetch-weather:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
+      - uses: actions/checkout@v3
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 20
-          cache: 'pnpm'
-
+          node-version: '18'
+      - name: Install pnpm
+        run: npm install -g pnpm
       - name: Install dependencies
         run: pnpm install
-
-      - name: Generate Prisma client
-        run: pnpm prisma generate
-
-      - name: Run weather cron
+      - name: Run cron script
+        run: pnpm run cron-weather
         env:
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
-        run: pnpm run cron-weather
+
