--- a/.github/workflows/cron-weather.yml
+++ b/.github/workflows/cron-weather.yml
@@ -26,4 +26,4 @@ jobs:
         env:  
           NODE_ENV: production
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: pnpm run cron-we
+        run: pnpm run cron-weather
